<resources>
    <string name="app_name">AppCRUD</string>
    <string name="login">LOGIN</string>
    <string name="inicia_sesion_para_continuar">Inicia Sesion para continuar</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="olvido_su_contrase_a">¿Olvido su contraseña?</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="registrar">Registrar</string>
</resources>